--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-"hello gh-pages" 
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <meta name="description" content="中医学・多階層分類Webページ">
+  <title>多階層分類</title>
+  <link rel="stylesheet" href="./css/main.css">
+
+  <script src="./js/vendor/jquery-1.10.2.min.js"></script>
+  <script src="./js/vendor/jquery-ui-1.10.3.custom.min.js"></script>
+  <!--<script src="./js/main.js"></script>-->
+  <script src="./js/tentative.js"></script>
+</head>
+<body>
+  <header class="page-header" role="banner">
+    <h1>証間の関係モデル図作成システム</h1>
+  </header>
+
+  <div class="page-main" role="main">
+    <form id="form">
+      <input type="text" id="key" size="50" value="">
+      <button type="button" onclick="onClick();">分類</button>
+    </form>
+    <p>
+
+    <div id="class">
+    </div>
+  </div>
+
+</body>
+</html>
